# cpp-project-template

./: .gitignore  CMakePresets.json  README.md  init.cmake  vcpkg.json
.github/: ci.yaml
.github/actions/linux/clang/: action.yaml
.github/actions/wasi/clang/: action.yml
.github/workflows/: ci.yaml
cmake/presets/: base.json
cmake/presets/compilers/: clang.json
cmake/presets/generators/: ninja.json
cmake/vcpkg/ports/wasm32-wasi/catch2/: 002-wasi-compatability.patch  README.md  portfile.cmake  vcpkg.json
cmake/wasi-sdk/: wasi-sdk.toolchain.cmake
src/: CMakeLists.txt
src/cmake/: add_cpp_pt_module.cmake  set_cpp_pt_target_properties.cmake
src/wasi/: CMakeLists.txt
src/wasi/src/: interface.cpp
